Fixed the overflow

--- a/content/index.css
+++ b/content/index.css
@@ -2,6 +2,9 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+* {
+    border: 1px solid black !important;
+  }
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -19,10 +22,9 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 62.5%;
 	font: inherit;
     vertical-align: baseline;
-    width:100%;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -52,16 +54,18 @@ table {
 
 .topHead{
     background-color: #e5e5e5;
-    padding:2rem;
+    margin:3%;
+    width:90%
 }
 
 h1{
     font-size:300%;
-    padding:2rem 0 2rem 3rem;
+    padding:0
 }
 
 .topNav{
-    padding-left:10%;
+    width:80%;
+    margin-left:5%;
     display:flex;
     flex-direction:row;
 }
@@ -110,11 +114,13 @@ h1{
 .myWorkRow1{
     display:flex;
     flex-direction: row;
+    justify-content: space-evenly;
 }
 
 .myWorkRow2{
     display:flex;
     flex-direction: row;
+    justify-content: space-evenly;
 }
 /* This is where the footer begin's */
 
@@ -126,7 +132,7 @@ h1{
 }
 
 h5{
-    padding:2rem;
+    margin-top:4%;
     font-size: 2rem;
 }
 
@@ -142,4 +148,5 @@ h5{
 .contactMe:active{
     background-color: black;
     color:white;
+
 }
